objects/sharinpix__EinsteinDataset__c.object
<CustomObject>
    <description>Contains SharinPix Einstein Vision Dataset equivalent.</description>
    <fields>
        <fullName>sharinpix__AlbumId__c</fullName>
        <description>Album ID used by the dataset.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Album Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__DatasetId__c</fullName>
        <description>Dataset Id as created on SharinPix</description>
        <label>Dataset Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__Description__c</fullName>
        <description>Einstein Dataset description.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sharinpix__EinsteinImageSize__c</fullName>
        <description>Size (resolution) of images to be uploaded to Einstein.</description>
        <inlineHelpText>Size of images to be uploaded to Einstein.</inlineHelpText>
        <label>Einstein Image Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sharinpix__EinsteinVisionProject__c</fullName>
        <description>Einstein Vision Project lookup.</description>
        <label>Einstein Vision Project</label>
        <referenceTo>sharinpix__EinsteinVisionProject__c</referenceTo>
        <relationshipLabel>Einstein Vision Datasets</relationshipLabel>
        <relationshipName>Einstein_Vision_Datasets_2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Einstein Dataset</label>
    <listViews>
        <fullName>sharinpix__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einstein Datasets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>